001.basic/src/test/java/com/java/examples/design/pattern/d01singleton/Singleton01Test.java
package com.java.examples.design.pattern.d01singleton;

import org.junit.Test;

import static org.junit.Assert.*;

public class Singleton01Test {

    @Test
    public void smoke() {
        // error
        // new Singleton01();
    }
}